--- a/CursoKotlin/app/src/main/res/values/strings.xml
+++ b/CursoKotlin/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">CursoKotlin</string>
+    <string name="textview">TextView</string>
+    <string name="button">Button</string>
+    <string name="multiplicar">Multiplicar</string>
+    <string name="sumar">Sumar</string>
+    <string name="restar">Restar</string>
 </resources>
