--- a/AboutMe/app/src/main/res/values/strings.xml
+++ b/AboutMe/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AboutMe</string>
+    <string name="sergio_portillo">Sergio Portillo</string>
 </resources>
