--- a/AplicacionSpinner2/app/src/main/res/values/strings.xml
+++ b/AplicacionSpinner2/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AplicacionSpinner</string>
+    <string name="Nombre"> Nombre </string>
+    <string name="Apellidos"> Apellidos</string>
+    <string name="Edad"> Edad</string>
+    <string name="etapaEd"> Etapa Educativa </string>
 </resources>
