--- a/AplicacionSpinner2/app/src/main/res/values/strings.xml
+++ b/AplicacionSpinner2/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="grant_permission">Conceder permiso</string>
     <string name="yes">Conceder</string>
     <string name="no">Denegar</string>
+    <string name="permission_required_text">Se requiere el permiso de:</string>
 </resources>
