--- a/AplicacionSpinner2/app/src/main/res/values/strings.xml
+++ b/AplicacionSpinner2/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="etapaEd"> Etapa Educativa </string>
     <string name="Email">Email</string>
     <string name="selected_date_is">La fecha seleccionada es :</string>
-    <string name="select_date">Selecciona una fecha</string>
+    <string name="select_date">Fecha de nacimiento</string>
     <string name="action_1">Modificar Datos</string>
     <string name="action_2">Confirmar Datos</string>
     <string name="content_description_media">perfil</string>
